--- a/Parth Traders.Service/Parth Traders.Service.csproj
+++ b/Parth Traders.Service/Parth Traders.Service.csproj
@@ -7,4 +7,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.9" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Parth Traders.Domain\Parth Traders.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
