--- a/Parth Traders/Parth Traders.API.csproj
+++ b/Parth Traders/Parth Traders.API.csproj
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="Dto\User\" />
   </ItemGroup>
 
   <ItemGroup>
