--- a/Frontend/parth-traders/package.json
+++ b/Frontend/parth-traders/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.2.0",
     "fast-json-patch": "^3.1.1",
     "jquery": "^3.6.1",
+    "ngx-toastr": "^15.0.0",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
