--- a/Frontend/parth-traders/package.json
+++ b/Frontend/parth-traders/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.2.0",
     "fast-json-patch": "^3.1.1",
     "jquery": "^3.6.1",
+    "lodash": "^4.17.21",
     "ngx-toastr": "^15.0.0",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.5.0",
@@ -37,6 +38,7 @@
     "@angular/compiler-cli": "^14.2.0",
     "@types/jasmine": "~3.10.0",
     "@types/jquery": "^3.5.14",
+    "@types/lodash": "^4.14.185",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
