--- a/Backend/Parth Traders/appsettings.json
+++ b/Backend/Parth Traders/appsettings.json
@@ -3,7 +3,11 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    }
+    },
+  },
+  "JwtSettings": {
+    "validIssuer": "ParthTradersAPI",
+    "validAudience": "https://localhost:5031"
   },
   "AllowedHosts": "*"
 }
