--- a/Backend/Parth Traders/appsettings.json
+++ b/Backend/Parth Traders/appsettings.json
@@ -7,7 +7,8 @@
   },
   "JwtSettings": {
     "validIssuer": "ParthTradersAPI",
-    "validAudience": "https://localhost:5031"
+    "validAudience": "https://localhost:5031",
+    "expires": 5
   },
   "AllowedHosts": "*"
 }
