--- a/Frontend/parth-traders/package.json
+++ b/Frontend/parth-traders/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^5.2.0",
     "fast-json-patch": "^3.1.1",
     "jquery": "^3.6.1",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "ngx-toastr": "^15.0.0",
     "ngx-ui-loader": "^13.0.0",
