--- a/Frontend/parth-traders/package.json
+++ b/Frontend/parth-traders/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.6.1",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "ngx-infinite-scroll": "^10.0.1",
     "ngx-toastr": "^15.0.0",
     "ngx-ui-loader": "^13.0.0",
     "rxjs": "~7.5.0",
