added filter by categories and product types feature

--- a/Frontend/parth-traders/package.json
+++ b/Frontend/parth-traders/package.json
@@ -16,12 +16,14 @@
     "@angular/compiler": "^14.2.0",
     "@angular/core": "^14.2.0",
     "@angular/forms": "^14.2.0",
+    "@angular/localize": "^18.0.2",
     "@angular/material": "^14.2.0",
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
     "@auth0/angular-jwt": "^5.1.0",
-    "@ng-bootstrap/ng-bootstrap": "^13.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^13.1.1",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.2.0",
     "fast-json-patch": "^3.1.1",
     "jquery": "^3.6.1",
@@ -43,6 +45,7 @@
     "@types/jquery": "^3.5.14",
     "@types/lodash": "^4.14.185",
     "@types/node": "^12.11.1",
+    "@types/popper.js": "^1.11.0",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
