--- a/Frontend/parth-traders/package.json
+++ b/Frontend/parth-traders/package.json
@@ -25,6 +25,8 @@
     "@auth0/angular-jwt": "^5.1.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.11.8",
+    "ajv": "^6.12.6",
+    "ajv-keywords": "^3.5.2",
     "bootstrap": "^5.2.0",
     "fast-json-patch": "^3.1.1",
     "jquery": "^3.6.1",
