--- a/Frontend/parth-traders/package.json
+++ b/Frontend/parth-traders/package.json
@@ -28,6 +28,7 @@
     "ajv": "^6.12.6",
     "ajv-keywords": "^3.5.2",
     "bootstrap": "^5.2.0",
+    "boxicons": "^2.1.4",
     "fast-json-patch": "^3.1.1",
     "jquery": "^3.6.1",
     "jwt-decode": "^3.1.2",
