update to angular 17 and added ngx paypal package

--- a/Frontend/parth-traders/package.json
+++ b/Frontend/parth-traders/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parth-traders",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -10,52 +10,53 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-slider/ngx-slider": "^15.0.1",
-    "@angular/animations": "^17.3.11",
-    "@angular/cdk": "^15.2.9",
-    "@angular/common": "^17.3.11",
-    "@angular/compiler": "^17.3.11",
-    "@angular/core": "^17.3.11",
-    "@angular/forms": "^17.3.11",
-    "@angular/localize": "^17.3.11",
-    "@angular/material": "^15.2.9",
-    "@angular/platform-browser": "^17.3.11",
-    "@angular/platform-browser-dynamic": "^17.3.11",
-    "@angular/router": "^17.3.11",
-    "@auth0/angular-jwt": "^5.1.0",
-    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
+    "@angular-slider/ngx-slider": "^17.0.0",
+    "@angular/animations": "^17.3.12",
+    "@angular/cdk": "^17.1.0",
+    "@angular/common": "^17.3.12",
+    "@angular/compiler": "^17.3.12",
+    "@angular/core": "^17.3.12",
+    "@angular/forms": "^17.3.12",
+    "@angular/localize": "^17.3.12",
+    "@angular/material": "^17.1.0",
+    "@angular/platform-browser": "^17.3.12",
+    "@angular/platform-browser-dynamic": "^17.3.12",
+    "@angular/router": "^17.3.12",
+    "@auth0/angular-jwt": "^5.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@popperjs/core": "^2.11.8",
-    "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2",
-    "bootstrap": "^5.2.0",
+    "ajv": "^8.11.0",
+    "ajv-keywords": "^5.0.0",
+    "bootstrap": "^5.3.0",
     "boxicons": "^2.1.4",
     "fast-json-patch": "^3.1.1",
-    "jquery": "^3.6.1",
-    "jwt-decode": "^3.1.2",
+    "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
-    "ngx-infinite-scroll": "^18.0.0",
+    "ngx-infinite-scroll": "^17.0.0",
+    "ngx-paypal": "^11.0.0",
     "ngx-toastr": "^19.0.0",
     "ngx-ui-loader": "^13.0.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.7"
+    "rxjs": "^7.8.0",
+    "tslib": "^2.5.0",
+    "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^10.0.1",
+    "@angular-builders/custom-webpack": "^13.0.0",
     "@angular-devkit/build-angular": "^17.3.8",
     "@angular/cli": "^17.3.8",
-    "@angular/compiler-cli": "^17.3.11",
-    "@types/jasmine": "~3.10.0",
-    "@types/jquery": "^3.5.14",
+    "@angular/compiler-cli": "^17.3.12",
+    "@types/jasmine": "~4.0.0",
+    "@types/jquery": "^3.5.30",
     "@types/lodash": "^4.14.185",
-    "@types/node": "^12.11.1",
+    "@types/node": "^18.15.0",
     "@types/popper.js": "^1.11.0",
-    "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
+    "jasmine-core": "^5.1.0",
+    "karma": "^6.4.2",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "typescript": "^5.4.5"
   }
 }
