- removed logger logic - populate missing field population - fixed bugs - fixed registration of user - refactor code

--- a/Backend/Parth Traders/appsettings.json
+++ b/Backend/Parth Traders/appsettings.json
@@ -3,12 +3,14 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    },
+    }
   },
   "JwtSettings": {
     "validIssuer": "ParthTradersAPI",
-    "validAudience": "https://localhost:5031",
+    "validAudience": "https://rparth07-parth-traders.netlify.app",
     "expires": 120
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": "workstation id=Parth-Traders.mssql.somee.com;packet size=4096;user id=cuberman73-parth_SQLLogin_1;pwd=ff7m8c29n6;data source=Parth-Traders.mssql.somee.com;persist security info=False;initial catalog=Parth-Traders;TrustServerCertificate=True",
+  "AllowedOrigin": "https://rparth07-parth-traders.netlify.app"
 }
